Fix mobile layout broken after update Fix PC settings scroll Settings use TypeScript

--- a/src/app/features/settings/Settings.scss
+++ b/src/app/features/settings/Settings.scss
@@ -89,6 +89,9 @@
             border-bottom: none;
         }
     }
+
+    max-height: 100%;
+    overflow-y: scroll;
 }
 
 .settings-notifications {
